# voting

./: CMakeLists.txt  LICENSE  README.md  package.xml
msg/: vote.msg
src/: collect.cpp  vote.cpp
